--- a/index.html
+++ b/index.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-     #demo {
-
-         margin: 0 auto;
-         width: 800px;
-         height: 500px;
-         background-color: bisque;
-         text-align: center;
-     }
-    </style>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <div id="demo">
